@@ -1,3 +1,8 @@
+2008-06-14  Robert Millan  <rmh@aybabtu.com>
+
+	* util/i386/efi/grub-install.in (modules): Remove `_chain'.
+	* util/i386/pc/grub-install.in (modules): Likewise.
+
 2008-06-13  Pavel Roskin  <proski@gnu.org>
 
 	* commands/ls.c (grub_ls_list_files): Fix format warnings.
